[metadata]
name = feditools
version = 0.1.0a2
url = https://github.com/pypa/sampleproject
author = Nigel Small
author_email = technige@nige.tech
license = MIT
license_files = LICENSE.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
